# scenesage

./: .coverage  .gitignore  CLAUDE.md  README.md  SCENESAGE_TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: Dockerfile
app/src/: ingest.py  main.py  retrieval.py
evaluation/: evaluate.py
tests/: conftest.py  test_ingest.py  test_retrieval.py
