[project]
name = "scenesage"
version = "0.1.0"
description = "A locally-running RAG (Retrieval-Augmented Generation) tool for analysing film scripts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "httpx>=0.28.1",
    "pymupdf>=1.27.2.3",
    "streamlit>=1.58.0",
    "taskipy>=1.14.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "langchain-community==0.2.17",
    "langchain-ollama==0.1.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ragas==0.4.3",
    "ruff>=0.15.17",
]

[tool.black]
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.taskipy.tasks]
test = "pytest --cov=app.src --cov-report=term-missing"
lint = "ruff check ."
format = "black --check ."
check = "task lint && task format && task test"
evaluate = "PYTHONPATH=. python evaluation/evaluate.py"